// https://help.aliyun.com/document_detail/29055.html

message Log
{
    required uint32 time = 1;// UNIX time Format
    message Content
    {
        required string key = 1;
        required string value = 2;
    }
    repeated Content contents = 2;
}

message LogTag
{
    required string key = 1;
    required string value = 2;
}

message LogGroup
{
    repeated Log logs= 1;
    optional string reserved = 2; // reserved fields
    optional string topic = 3;
    optional string source = 4;
    repeated LogTag log_tags = 6;
}

message LogGroupList
{
    repeated LogGroup log_group_list = 1;
}
